--- a/index.html
+++ b/index.html
@@ -518,35 +518,39 @@
                 <a href="">
                         <img src="png/6-2.jpg" alt="" width="140px;" height="140px;">
                     </a>
-                    <p>米兔故事机 mini 蓝牙版</p>
-                    <p class="pp">149元</p>
-                    <pre>128人好评</pre>
+                    <p>米兔卫生纸 4卷</p>
+                    <p class="pp">49元</p>
+                    <pre>28人好评</pre>
             </div>
             <div class="weii">
                 <a href="">
                         <img src="png/6-3.jpg" alt="" width="140px;" height="140px;">
                     </a>
-                    <p>米兔故事机 mini 蓝牙版</p>
-                    <p class="pp">149元</p>
-                    <pre>128人好评</pre>
+                    <p>米兔卫生纸</p>
+                    <p class="pp">9元</p>
+                    <pre>198人好评</pre>
             </div>
             <div class="weii">
                 <a href="">
                         <img src="png/6-4.jpg" alt="" width="140px;" height="140px;">
                     </a>
-                    <p>米兔故事机 mini 蓝牙版</p>
-                    <p class="pp">145元</p>
-                    <pre>128人好评</pre>
+                    <p>米兔智能照相机</p>
+                    <p class="pp">745元</p>
+                    <pre>188人好评</pre>
             </div>
             <div class="weii ii">
                 <a href="">
                         <img src="png/6-5.jpg" alt="" width="140px;" height="140px;">
                     </a>
-                    <p>米兔故事机 mini 蓝牙版</p>
-                    <p class="pp">149元</p>
-                    <pre>128人好评</pre>
+                    <p>手机壳珊瑚红</p>
+                    <p class="pp">39元</p>
+                    <pre>328人好评</pre>
             </div>
         </div>
+    </div>
+    <!-- 分割 -->
+    <div class="rep">
+        
     </div>
 </body>
 </html>
