--- a/index.html
+++ b/index.html
@@ -8,6 +8,149 @@
     <link rel="stylesheet" href="css/444.css">
 </head>
 <body>
+    <div class="head">
+        <div class="neik">
+            <div class="daoh">
+                <div class="dzi">
+                    <a href="">小米商城</a>
+                    <span class="shuu">|</span>
+                </div>
+                <div class="dzi">
+                    <a href="">MIUI</a>
+                    <span class="shuu">|</span>
+                </div>
+                <div class="dzi">
+                    <a href="">lOT</a>
+                    <span class="shuu">|</span>
+                </div>
+                <div class="dzi">
+                    <a href="">云服务</a>
+                    <span class="shuu">|</span>
+                </div>
+                <div class="dzi">
+                    <a href="">金融</a>
+                    <span class="shuu">|</span>
+                </div>
+                <div class="dzi">
+                    <a href="">有品</a>
+                    <span class="shuu">|</span>
+                </div>
+                <div class="dzi">
+                    <a href="">小爱开放平台</a>
+                    <span class="shuu">|</span>
+                </div>
+                <div class="dzi">
+                    <a href="">企业团购</a>
+                    <span class="shuu">|</span>
+                </div>
+                <div class="dzi">
+                    <a href="">资质证照</a>
+                    <span class="shuu">|</span>
+                </div>
+                <div class="dzi">
+                    <a href="">协议规则</a>
+                    <span class="shuu">|</span>
+                </div>
+                <div class="dzi">
+                    <a href="">下载APP</a>
+                    <span class="shuu">|</span>
+                </div>
+                <div class="dzi">
+                    <a href="">Select Region</a>
+                    <span class="shuu">|</span>
+                </div>
+            </div>
+            <div class="gouw">
+                <a href="">购物车（0）</a>
+            </div>
+            <div class="lou">
+                <div class="dzi">
+                    <a href="">登陆</a>
+                    <span class="shuu">|</span>
+                </div>
+                <div class="dzi">
+                    <a href="">注册</a>
+                    <span class="shuu">|</span>
+                </div>
+                <div class="dzi">
+                    <a href="">消息通知</a>
+                    <span class="shuu">|</span>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- 分割 -->
+    <div class="sous">
+        <div class="mi">
+            
+        </div>
+        <div class="mid">
+            <div class="midd">
+                <a href="">小米手机</a>
+                </div>
+            <div class="midd">
+                <a href="">红米</a>
+                </div>
+            <div class="midd">
+                <a href="">电视</a>
+                </div>
+            <div class="midd">
+                <a href="">笔记本</a>
+                </div>
+            <div class="midd">
+                <a href="">家电</a>
+                </div>
+            <div class="midd">
+                <a href="">新品</a>
+                </div>
+            <div class="midd">
+                <a href="">路由器</a>
+                </div>
+            <div class="midd">
+                <a href="">智能硬件</a>
+                </div>
+            <div class="midd">
+                <a href="">服务</a>
+                </div>
+            <div class="midd">
+                <a href="">社区</a>
+                </div>
+        </div>
+        <div class="mis">
+            <div class="suo">
+                <input type="text">
+            </div>
+            <div class="suoo">
+                <button></button>
+            </div>
+        </div>
+    </div>
+    <!-- 分割 -->
+    <div class="lunb">
+
+    </div>
+    <!-- 分割 -->
+    <div class="sxiao">
+        <div class="zuos">
+            <img src="png/8-8.png" alt="" width="234px;" height="170px;">
+        </div>
+        <div class="yous">
+            <div class="youss">
+                <img src="png/8-1.jpg" alt="" width="316px;" height="170px;">
+            </div>
+            <div class="youss">
+                <img src="png/8-2.jpg" alt="" width="316px;" height="170px;">
+            </div>
+            <div class="youss">
+                <img src="png/8-3.jpg" alt="" width="316px;" height="170px;">
+            </div>
+        </div>
+    </div>
+    <!-- 分割 -->
+    <div class="tiao">
+        <img src="png/5-5.jpg" alt="" width="1226px;" height="120px;">
+    </div>
+    <!-- 分割 -->
     <div class="bigbox">
         <div class="topp">
             <span class="lef">手机</span>
@@ -66,6 +209,10 @@
                     <pre>599元</pre>
             </div>
         </div>
+    </div>
+    <!-- 分割 -->
+    <div class="tiao">
+        <img src="png/5-6.jpg" alt="" width="1226px;" height="120px;">
     </div>
     <!-- 分割 -->
     <div class="bbox">
@@ -137,18 +284,18 @@
                     <a href="">
                         <img src="png/8.jpg" alt="" width="80" height="80">
                     </a>
-                    <p>小米净水器...</p>
-                    <pre>1999元</pre>
+                    <p></p>
+                    <pre>1</pre>
                 </div>
-                <div class="bx xx">
+                <div class="bx xx xxx">
                     <a href="">
                         <img src="png/10.png" alt="" width="48" height="48">
                     </a>
-                    <p>浏览更多</p>
-                    <pre>热门</pre>
+                    <p></p>
+                    <pre></pre>
                 </div>
                 </div>
-            </div>
+    </div>
     </div>
     <!-- 分割 -->
     <div class="tiao">
@@ -225,15 +372,15 @@
                     <a href="">
                         <img src="png/17.jpg" alt="" width="80" height="80">
                     </a>
-                    <p>小米净水器...</p>
-                    <pre>1999元</pre>
+                    <p></p>
+                    <pre></pre>
                 </div>
-                <div class="bx xx">
+                <div class="bx xx xxx">
                     <a href="">
                             <img src="png/10.png" alt="" width="48" height="48">
                         </a>
-                        <p>浏览更多</p>
-                        <pre>热门</pre>
+                        <p></p>
+                        <pre></pre>
                     </div>
             </div>
         </div>
@@ -312,15 +459,15 @@
                 <a href="">
                     <img src="png/2-10.jpg" alt="" width="80" height="80">
                 </a>
-                <p>小米小钢炮</p>
-                <pre>129元</pre>
+                <p></p>
+                <pre></pre>
             </div>
-            <div class="bx xx">
+            <div class="bx xx xxx">
                 <a href="">
                         <img src="png/10.png" alt="" width="48" height="48">
                     </a>
-                    <p>浏览更多</p>
-                    <pre>热门</pre>
+                    <p></p>
+                    <pre></pre>
                 </div>
             </div>
         </div>
@@ -399,15 +546,15 @@
                 <a href="">
                     <img src="png/3-10.jpg" alt="" width="80" height="80">
                 </a>
-                <p>小米IX3</p>
-                <pre>32.9元</pre>
+                <p></p>
+                <pre></pre>
             </div>
-            <div class="bx xx">
+            <div class="bx xx xxx">
                 <a href="">
                         <img src="png/10.png" alt="" width="48" height="48">
                     </a>
-                    <p>浏览更多</p>
-                    <pre>热门</pre>
+                    <p></p>
+                    <pre></pre>
                 </div>
             </div>
         </div>
@@ -487,15 +634,15 @@
                 <a href="">
                     <img src="png/4-10.jpg" alt="" width="80" height="80">
                 </a>
-                <p>8H乳胶</p>
-                <pre>1499元</pre>
+                <p></p>
+                <pre></pre>
             </div>
-            <div class="bx xx">
+            <div class="bx xx xxx">
                 <a href="">
                         <img src="png/10.png" alt="" width="48" height="48">
                     </a>
-                    <p>浏览更多</p>
-                    <pre>热门</pre>
+                    <p></p>
+                    <pre></pre>
                 </div>
             </div>
         </div>
@@ -550,7 +697,111 @@
     </div>
     <!-- 分割 -->
     <div class="rep">
-        
+        <div class="reps">
+            <p>热评产品<p>
+        </div>
+        <div class="repx">
+            <div class="rexx">
+                <a href="" class="rexx">
+                    <img src="png/7-1.jpg" alt="" width="296px;" height="220px;">
+                    <p>非常好用，孩子使用防止沉迷于电话影响学习。做工很好，定位基本准确，通话清晰。如果加入时间显示就更完美了...</p>
+                    <pre>来自于小妞的评价</pre>
+                    <div>米兔居家系列</div>
+                </a>
+            </div>
+            <div class="rex">
+                <a href="">
+                    <img src="png/7-2.jpg" alt="" width="296px;" height="220px;">
+                    <p>外形简洁大方，大爱小米！全家人都在用小米的产品，真心不错，最主要的是性价比高。附图，给客服妹子一个大...</p>
+                    <pre>来自于小妞的评价</pre>
+                    <div>米兔居家系列</div>
+                </a>
+            </div>
+            <div class="rex">
+                <a href="">
+                    <img src="png/7-3.jpg" alt="" width="296px;" height="220px;">
+                    <p>包装很让人感动，式样也很可爱，做出的饭全家人都爱吃，超爱五星！手机控制还是不太熟练，最主要是没有连接...</p>
+                    <pre>来自于小妞的评价</pre>
+                    <div>米兔居家系列</div>
+                </a>
+            </div>
+            <div class="rex">
+                <a href="">
+                    <img src="png/7-4.jpg" alt="" width="296px;" height="220px;">
+                    <p>东西真心不错，用过最好用的插线板，做工外观没得挑剔，3个USB接口很实用，充电快，建议不包邮的应该在...</p>
+                    <pre>来自于小妞的评价</pre>
+                    <div>米兔居家系列</div>
+                </a>
+            </div>
+        </div>
     </div>
+    <!-- 分割 -->
+    <div class="hali">
+        <div class="halis">
+            <span>内容</span>
+        </div>
+        <div class="halix">
+            <div class="halii box">
+                <p>图书</p>
+                <a href="">
+                    <img src="png/8-4.png" alt="">
+                </a>
+            </div>
+            <div class="halii">
+                <p>MIUI主题</p>
+                <a href="">
+                    <img src="png/8-5.png" alt="">
+                </a>
+            </div>
+            <div class="halii">
+                <p>游戏</p>
+                <a href="">
+                    <img src="png/8-6.png" alt="">
+                </a>
+            </div>
+            <div class="halii">
+                <p>应用</p>
+                <a href="">
+                    <img src="png/8-7.png" alt="">
+                </a>
+            </div>
+        </div>
+    <!-- 分割 -->
+    <div class="yuan">
+        <div class="yuans">
+            <span>视频</span>
+        </div>
+        <div class="yuanx">
+            <div class="yuani box">
+                <a href="">
+                    <img src="png/8-8.jpg" alt="" width="296px;" height="">
+                </a>
+            <span>王源 & 小米9 全新广告大片</span>
+            <p>好看又能打！我反正被帅到了，Will You？</p>
+            </div>
+            <div class="yuani">
+                <a href="">
+                    <img src="png/8-9.jpg" alt="" width="296px;" height="">
+                </a>
+            <span>王源 & 小米9 全新广告大片</span>
+            <p>好看又能打！我反正被帅到了，Will You？</p>
+            </div>
+            <div class="yuani">
+                <a href="">
+                    <img src="png/8-10.jpg" alt="" width="296px;" height="">
+                </a>
+            <span>王源 & 小米9 全新广告大片</span>
+            <p>好看又能打！我反正被帅到了，Will You？</p>
+            </div>
+            <div class="yuani">
+                <a href="">
+                    <img src="png/8-11.jpg" alt="" width="296px;" height="">
+                </a>
+            <span>王源 & 小米9 全新广告大片</span>
+            <p>好看又能打！我反正被帅到了，Will You？</p>             
+            </div>
+        </div>
+    </div>
+    <!-- 分割 -->
 </body>
 </html>
