--- a/index.html
+++ b/index.html
@@ -349,11 +349,11 @@
     <div class="bbox">
         <div class="top">
             <a href="">
-                    <span class="left">家电</span>
-                    <span class="right">家居</span>
-                    <span class="right">电视语音</span>
-                    <span class="right">电脑</span>
-                    <span class="right">热门</span>
+                <span class="left">家电</span>
+                <span class="right">家居</span>
+                <span class="right">电视语音</span>
+                <span class="right">电脑</span>
+                <span class="right">热门</span>
             </a>
         </div>
         <div class="bottom">
@@ -373,33 +373,30 @@
             <div class="you">
                 <div class="bx">
                     <a href="">
-                            <img src="png/1.jpg" alt="" width="150" height="150">
-                            <div>米家互联网轰洗一体机10kg</div>
-                            <p></p>
-                            <pre>2199元</pre>
+                        <img src="png/1.jpg" alt="" width="150" height="150">
+                        <div>米家互联网轰洗一体机10kg</div>
+                        <p></p>
+                        <pre>2199元</pre>
                     </a>
-                    <div class="ccc">
-                    </div>
+                    <div class="ccc"></div>
                 </div>
                 <div class="bx">
                     <a href="">
-                            <img src="png/2.jpg" alt="" width="150" height="150">
-                            <div>米家互联网空调（一级能效）</div>
-                            <p>米家互联网空调（一级能效）</p>
-                            <pre>2299元 <s>2669元</s></pre>
+                        <img src="png/2.jpg" alt="" width="150" height="150">
+                        <div>米家互联网空调（一级能效）</div>
+                        <p>米家互联网空调（一级能效）</p>
+                        <pre>2299元 <s>2669元</s></pre>
                     </a>
-                    <div class="ccc">
-                    </div>
+                    <div class="ccc"></div>
                 </div>
                 <div class="bx">
                     <a href="">
-                            <img src="png/3.png" alt="" width="150" height="150">
-                            <div>15.6笔记本 i5 4G MX110</div>
-                           <p></p>
-                           <pre>4199元</pre>
+                        <img src="png/3.png" alt="" width="150" height="150">
+                        <div>15.6笔记本 i5 4G MX110</div>
+                        <p></p>
+                        <pre>4199元</pre>
                     </a>
-                    <div class="ccc">
-                    </div>
+                    <div class="ccc"></div>
                 </div>
                 <div class="bx">
                     <a href="">
@@ -408,8 +405,7 @@
                             <p></p>
                             <pre>5999元</pre>
                     </a>
-                    <div class="ccc">
-                    </div>
+                    <div class="ccc"></div>
                 </div>
                 <div class="bx">
                     <a href="">
@@ -418,8 +414,7 @@
                             <p>OLED显示屏幕/激光颗粒物传感器</p>
                             <pre>1499元</pre>
                     </a>
-                    <div class="ccc">
-                    </div>
+                    <div class="ccc"></div>
                 </div>
                 <div class="bx">
                     <a href="">
@@ -428,8 +423,7 @@
                             <p>一杯水，是一家人的安心</p>
                             <pre>99元</pre>
                     </a>
-                    <div class="ccc">
-                    </div>
+                    <div class="ccc"></div>
                 </div>
                 <div class="bx">
                     <a href="">
@@ -438,8 +432,7 @@
                             <p>阳光线，还原理想生活</p>
                             <pre>399元</pre>
                     </a>
-                    <div class="ccc">
-                    </div>
+                    <div class="ccc"></div>
                 </div>
                 <div class="bx xx">
                     <a href="">
@@ -489,6 +482,7 @@
                             <p>感知环境光，主动优化场景照明</p>
                             <pre>199元</pre>
                     </a>
+                    <div class="ccc"></div>
                 </div>
                 <div class="bx">
                     <a href="">
@@ -497,6 +491,7 @@
                             <p></p>
                             <pre>169元 <s></s></pre>
                     </a>
+                    <div class="ccc"></div>
                 </div>
                 <div class="bx">
                     <a href="">
@@ -505,6 +500,7 @@
                            <p></p>
                            <pre>59元</pre>
                     </a>
+                    <div class="ccc"></div>
                 </div>
                 <div class="bx">
                    <a href="">
@@ -513,6 +509,7 @@
                     <p>多 1L 容量，更多朋友一起来分享</p>
                     <pre>599元</pre>
                    </a>
+                   <div class="ccc"></div>
                 </div>
                 <div class="bx">
                    <a href="">
@@ -521,6 +518,7 @@
                     <p>双风机循环气流，高效净化车内空气</p>
                     <pre>499元</pre>
                    </a>
+                   <div class="ccc"></div>
                 </div>
                 <div class="bx">
                     <a href="">
@@ -529,6 +527,7 @@
                             <p></p>
                             <pre>399元</pre>
                     </a>
+                    <div class="ccc"></div>
                 </div>
                 <div class="bx">
                     <a href="">
@@ -537,6 +536,7 @@
                             <p>高效能磁悬浮声波马达</p>
                             <pre>199元</pre>
                     </a>
+                    <div class="ccc"></div>
                 </div>
                 <div class="bx xx">
                     <a href="">
@@ -588,6 +588,7 @@
                         <p></p>
                         <pre>69元</pre>
                 </a>
+                <div class="ccc"></div>
             </div>
             <div class="bx">
                 <a href="">
@@ -596,6 +597,7 @@
                         <p></p>
                         <pre>299元 <s></s></pre>
                 </a>
+                <div class="ccc"></div>
              </div>
             <div class="bx">
                 <a href="">
@@ -604,6 +606,7 @@
                         <p></p>
                         <pre>99元</pre>
                 </a>
+                <div class="ccc"></div>
             </div>
             <div class="bx">
                 <a href="">
@@ -612,6 +615,7 @@
                         <p></p>
                         <pre>69元</pre>
                 </a>
+                <div class="ccc"></div>
             </div>
             <div class="bx">
                 <a href="">
@@ -620,6 +624,7 @@
                         <p></p>
                         <pre>59元</pre>
                 </a>
+                <div class="ccc"></div>
             </div>
             <div class="bx">
                 <a href="">
@@ -628,6 +633,7 @@
                         <p></p>
                         <pre>169元</pre>
                 </a>
+                <div class="ccc"></div>
             </div>
             <div class="bx">
                 <a href="">
@@ -636,6 +642,7 @@
                        <p></p>
                        <pre>99元</pre>
                 </a>
+                <div class="ccc"></div>
             </div>
             <div class="bx xx">
                 <a href="">
@@ -687,6 +694,7 @@
                         <p></p>
                         <pre>29元</pre>
                 </a>
+                <div class="ccc"></div>
             </div>
             <div class="bx">
                 <a href="">
@@ -695,6 +703,7 @@
                         <p></p>
                         <pre>49元 <s></s></pre>
                 </a>
+                <div class="ccc"></div>
                 </div>
             <div class="bx">
                 <a href="">
@@ -703,6 +712,7 @@
                         <p></p>
                         <pre>59元</pre>
                 </a>
+                <div class="ccc"></div>
             </div>
             <div class="bx">
                 <a href="">
@@ -711,6 +721,7 @@
                         <p></p>
                         <pre>16元</pre>
                 </a>
+                <div class="ccc"></div>
             </div>
             <div class="bx">
                 <a href="">
@@ -719,6 +730,7 @@
                         <p></p>
                         <pre>19元</pre>
                 </a>
+                <div class="ccc"></div>
             </div>
             <div class="bx">
                 <a href="">
@@ -727,6 +739,7 @@
                         <p></p>
                         <pre>19元</pre>
                 </a>
+                <div class="ccc"></div>
             </div>
             <div class="bx">
                 <a href="">
@@ -735,6 +748,7 @@
                         <p></p>
                         <pre>49元</pre>
                 </a>
+                <div class="ccc"></div>
             </div>
             <div class="bx xx">
                 <a href="">
@@ -787,6 +801,7 @@
                         <p></p>
                         <pre>149元</pre>
                 </a>
+                <div class="ccc"></div>
             </div>
             <div class="bx">
                 <a href="">
@@ -795,6 +810,7 @@
                         <p></p>
                          <pre>888元 <s></s></pre>
                 </a>
+                <div class="ccc"></div>
             </div>
             <div class="bx">
                 <a href="">
@@ -803,6 +819,7 @@
                         <p></p>
                         <pre>299元</pre>
                 </a>
+                <div class="ccc"></div>
             </div>
             <div class="bx">
                 <a href="">
@@ -811,6 +828,7 @@
                         <p></p>
                         <pre>44元</pre>
                 </a>
+                <div class="ccc"></div>
             </div>
             <div class="bx">
                 <a href="">
@@ -819,6 +837,7 @@
                         <p></p>
                         <pre>99元</pre>
                 </a>
+                <div class="ccc"></div>
             </div>
             <div class="bx">
                 <a href="">
@@ -827,6 +846,7 @@
                         <p></p>
                         <pre>799元</pre>
                 </a>
+                <div class="ccc"></div>
             </div>
             <div class="bx">
                 <a href="">
@@ -835,6 +855,7 @@
                         <p></p>
                         <pre>39.9元</pre>
                 </a>
+                <div class="ccc"></div>
             </div>
             <div class="bx xx">
                 <a href="">
